--- a/project6/index.html
+++ b/project6/index.html
@@ -18,7 +18,7 @@
     <script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script>
     <script src="node_modules/@babel/polyfill/dist/polyfill.min.js"></script>
     <script src="scripts/repo.jsx"></script>
-    <script type="text/babel" src="scripts/popular.jsx"></script> --> 
+    <script type="text/babel" src="scripts/popular.jsx"></script> shugo--> 
     <script src="dist/bundle.js"></script>
 </body>
 </html>
